--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/menu"
         android:enabled="true"
-        android:title="@string/menu"
+        android:title="@string/Change"
         android:icon="@drawable/menu_icon"/>
 
     <item
         android:id="@+id/about"
-        android:title="@string/about"
+        android:title="@string/menu_sleep"
         android:icon="@drawable/about_icon"/>
 
 </menu>
